# call-center

./: .gitignore  CMakeLists.txt  README.md  cdr_jn.txt  cfg.json  conanfile.txt  logs.txt  main.cpp  makefile  tests
include/: callCenterService.h  cdr.h  cdrLoggerImpl.h  config.h  defs.h  fileLogger.h  httpServer.h  operatorMock.h  status.h  timeoutHandler.h
src/: callCenterService.cpp  cdr.cpp  cdrLoggerImpl.cpp  config.cpp  fileLogger.cpp  httpServer.cpp  operatorMock.cpp  status.cpp  timeoutHandler.cpp
test/: testConfig.cpp
test/file/: fail-cfg.json  ok-cfg.json  upd-cfg.json  upd-fail-cfg.json
